apps/host/portfolio-dev/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: portfolio-http
  namespace: dev
subsets:
  - addresses:
      - ip: 192.168.1.11
    ports:
      - name: http
        port: 4321
        protocol: TCP
